# rootsh

./: .gitignore  .gitmodules  AUTHORS  ChangeLog  INSTALL  Makefile.am  Makefile.am.coverage  Makefile.in  NEWS  README  README.developer  THANKS  TODO  acinclude.m4  aclocal.m4  configure  configure.in  rootsh.1  test.sh
continuous_integration/: .gitignore  copy-paste-detector  run-coverage  run-valgrind  sloccount.sh  standard_build  valgrind_suppression_rules.txt
continuous_integration/xUnit/: transform_valgrind.py
contrib/aix/: README
contrib/aix/rootsh/rootsh/: config  control  unconfig
contrib/hpux/: README  rootsh.postremove  rootsh.psf
contrib/linux/: rootsh.spec  rootsh.spec.in
contrib/solaris/: README  pkginfo  postinstall  prototype
m4/: gcov.m4
src/: .gitignore  Makefile.am  Makefile.in  basename.c  config.h.in  configParser.c  configParser.h  getopt.c  getopt1.c  getusershell.c  rootsh.c  write2syslog.c  write2syslog.h
test/: .gitignore  Makefile.am  testConfigParser.c
